audio analysis init commit